Continued working on mobile and tablet responsive layouts using media queries; having issues with getting layout to fill full vertical height of mobile viewports.

--- a/style.scss
+++ b/style.scss
@@ -28,14 +28,14 @@ $primary-background: #7C4066;
 // define wrapper as a grid to organise overall page layout - not actually needed for mobile layout??
 #wrapper {
     width: 100%;
+    // height: 100vh;
     margin: 0 auto;
     display: grid;
-    // grid-template-areas:
-    //     "nav"
-    //     "header"
-    //     "main"
-    //     "posts"
-    //     "footer"
+    // grid-template-rows: 6fr 8fr 3fr;
+    grid-template-areas:
+        "header"    
+        "nav"
+        "footer"
     ;
 }
 
@@ -44,6 +44,7 @@ header {
     display: flex;
     flex-direction: column;
     align-items: center;
+    grid-area: header;
 }
 
 // set header as a flex container to vertically stack header elements
@@ -58,7 +59,7 @@ header {
 #hero-image {
     object-fit: cover;
     width: 100%;
-    height: 80vw;
+    min-height: 70vw;
     position: absolute;
     z-index: -1;
 }
@@ -84,13 +85,13 @@ nav {
     display: flex;
     justify-content: center;
     align-items: center;
-    // font-weight: bold;
+    grid-area: nav;
     min-height: 2.5rem;
     background: $primary-background;
 }
 
 // set margins around navigational links for better readability
-// doesn't apply to index.html overwritten by .nav-button styling below
+// doesn't apply to index.html overwritten by .nav-home-item styling below
 nav > a {
     font-weight: bold;
     color: gray;
@@ -100,25 +101,20 @@ nav > a {
 #nav-home {
     display: flex;
     flex-direction: column;
+    justify-content: center;
+    padding: 1rem 0;
 }
 
-#nav-home > a {
-    font-size: 3rem;
-}
-
-.nav-button {
+.nav-home-item {
     min-height: 12vw;
     width: 60vw;
     border: 0;
-    border-radius: 8%;
+    border-radius: 3%;
+    text-align: center;
     font-size: 1.25rem;
-    color: gray;
     background: black;
+    padding-top: 1.2rem;
     margin: 0.5rem;
-}
-
-#nav-about {
-    background: black;
 }
 
 main {
@@ -186,6 +182,7 @@ footer {
     display: flex;
     flex-direction: column;
     align-items: center;
+    grid-area: footer;
     background: $primary-background;
     padding: 1rem;
 }
@@ -203,4 +200,36 @@ footer {
 
 #copyright {
     margin-top: 1rem;
+    font-weight: bold;
+}
+
+// media query for tablet sized viewport
+@media only screen and (min-width: 550px) {
+    #intro {
+        font-size: 1.35rem;
+    }
+
+    #nav-home {
+        width: 100vw;
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        row-gap: 5vw;
+        column-gap: 10vw;
+        justify-items: center;
+        padding: 10vw;
+        margin: 0 auto;
+    }
+
+    .nav-home-item {
+        width: 30vw;
+        height: 30vw;
+        font-size: 2rem;
+        padding-top: 12vw;
+    }
+}
+
+@media only screen and (min-width: 650px) {
+    .nav-home-item {
+        font-size: 2.25rem;
+    }
 }
